<resources>

    <string name="app_name">WhatToEat</string>

    <!-- Navigation -->
    <string name="navigation_home_fragment">Home</string>
    <string name="navigation_recommend_fragment">Recommend</string>
    <string name="navigation_store_information_fragment">Store Information</string>
    <string name="navigation_comment_fragment">Comment</string>
    <string name="navigation_post_fragment">Post</string>
    <string name="navigation_reserve_fragment">Reserve</string>
    <string name="navigation_add_report_fragment">Add Report</string>
    <string name="navigation_profile_fragment">Profile</string>
    <string name="navigation_register_fragment">Register</string>
    <string name="navigation_forget_password_fragment">Forget Password</string>
    <string name="navigation_reset_password_fragment">Reset Password</string>
    <string name="navigation_report_fragment">Report</string>
    <string name="navigation_login_fragment">Login</string>
    <string name="navigation_search_fragment">Search</string>
    <string name="navigation_map_fragment">Map</string>
    <string name="navigation_promotion_fragment">Promotion</string>
    <string name="navigation_promotion_information_fragment">Promotion Information</string>
    <string name="navigation_favorite_fragment">Favorite</string>
    <string name="navigation_history_fragment">History</string>
    <string name="navigation_reservation_fragment">Reservation</string>

    <!-- Bottom Navigation -->
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_recommend">Recommend</string>
    <string name="bottom_navigation_profile">Profile</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_map">Map</string>
    <string name="navigation_drawer_promotion">Promotion</string>
    <string name="navigation_drawer_favorite">Favorite</string>
    <string name="navigation_drawer_history">History</string>
    <string name="navigation_drawer_reservation">Reservation</string>

    <!-- Navigation Header Layout -->
    <string name="navigation_header_name">Name</string>

    <!-- Toolbar -->
    <string name="toolbar_search">Search</string>
    <string name="toolbar_map">Map</string>
    <string name="toolbar_register">Register</string>
    <string name="toolbar_clear_history">Clear History</string>

    <!-- Hint -->
    <string name="hint_search">Search</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_content">Content</string>

    <!-- Login -->
    <string name="bg_login">Login Background</string>
    <string name="bt_login">Login</string>
    <string name="bt_forget_password">Forget Password</string>

    <!-- Verification -->
    <string name="bt_send">Send</string>
    <string name="bt_confirm">Confirm</string>

    <!-- Register -->
    <string name="bt_register">Register</string>

    <!-- User -->
    <string name="user_please_login">Please Login</string>
    <string name="user_name">Name</string>
    <string name="user_identity">IDENTITY:</string>
    <string name="user_portrait_path">File/User/</string>

    <!-- Store -->
    <string name="default_value_star">0.0</string>
    <string name="bt_favorite">Favorite</string>
    <string name="bt_store_information">Information</string>
    <string name="bt_comment">Comment</string>
    <string name="bt_post">Post</string>
    <string name="tv_empty">Empty.</string>
    
    <!-- Map -->
    <string name="bt_navigation">Navigation</string>
    <string name="bt_call">Call</string>
    <string name="toast_call">Calling to: </string>
    <string name="tv_00">0.0</string>

    <!-- Comment -->
    <string name="tv_comment">Comment</string>

    <!-- Report -->
    <string name="tv_report">Report</string>

    <!-- Reserve -->
    <string name="tv_reserve">Reserve</string>
    <string name="bt_choose">Choose</string>
    <string name="bt_reserve">Reserve</string>

    <!-- Reservation -->
    <string name="reservation_amount"> 人</string>

    <!-- Settings -->
    <string name="bt_bind_google">Bind Google</string>
    <string name="bt_reset_password">Reset password</string>
    <string name="bt_logout">Logout</string>
    <string name="bt_report">Report</string>

    <!-- Picture -->
    <string name="bt_take_photos">Take Photos</string>
    <string name="bt_from_gallery">From Gallery</string>

    <!-- ContentDescription -->
    <string name="cd_home">Home</string>
    <string name="cd_check">Check</string>
    <string name="cd_google_login">Google Login</string>
    <string name="cd_add">Add</string>

    <!-- Success -->
    <string name="success_login">Login success.</string>

    <!-- Error -->
    <string name="error_name_can_not_be_null">Name can\'t be empty.</string>
    <string name="error_email_can_not_be_null">Email can\'t be empty.</string>
    <string name="error_password_can_not_be_null">Password can\'t be empty.</string>
    <string name="error_confirm_password_can_not_be_null">Confirm password can\'t be empty.</string>
    <string name="error_old_password_can_not_be_null">Old password can\'t be empty.</string>
    <string name="error_new_password_can_not_be_null">New password can\'t be empty.</string>
    <string name="error_verification_code_can_not_be_null">Verification code can\'t be empty.</string>
    <string name="error_phone_can_not_be_null">Phone can\'t be empty.</string>
    <string name="error_amount_can_not_be_null">Amount can\'t be empty.</string>
    <string name="error_date_can_not_be_null">Date can\'t be empty.</string>
    <string name="error_time_can_not_be_null">Time can\'t be empty.</string>
    <string name="error_content_can_not_be_null">Content can\'t be empty.</string>
    <string name="error_passwords_are_not_the_same">Password are not the same.</string>
    <string name="error_data_empty">Data empty.</string>
    <string name="error_please_login_first">Please login first.</string>
</resources>