<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/map_fragment"
            android:icon="@drawable/ic_map"
            android:title="@string/navigation_drawer_map" />

        <item
            android:id="@+id/promotion_fragment"
            android:icon="@drawable/ic_promotion"
            android:title="@string/navigation_drawer_promotion" />

        <item
            android:id="@+id/favorite_fragment"
            android:icon="@drawable/ic_heart_unchecked"
            android:title="@string/navigation_drawer_favorite" />

        <item
            android:id="@+id/history_fragment"
            android:icon="@drawable/ic_history"
            android:title="@string/navigation_drawer_history" />

        <item
            android:id="@+id/reservation_fragment"
            android:icon="@drawable/ic_reservation"
            android:title="@string/navigation_drawer_reservation" />
    </group>
</menu>