<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/recommend_fragment"
        android:icon="@drawable/ic_recommend"
        android:title="@string/bottom_navigation_recommend"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_fragment"
        android:enabled="false"
        android:title="@string/bottom_navigation_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_navigation_profile"
        app:showAsAction="ifRoom" />
</menu>