<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.lifecycle.LiveData" />

        <import type="me.lazy_assedninja.app.vo.Status" />

        <import type="me.lazy_assedninja.app.vo.Resource" />

        <import type="me.lazy_assedninja.app.vo.User" />

        <variable
            name="user"
            type="LiveData&lt;Resource&lt;User>>" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_login_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="80dp"
                android:contentDescription="@string/bg_login"
                android:src="@drawable/bg_login"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_email"
                app:boxStrokeColor="@color/primary_color"
                app:hintTextColor="@color/primary_color"
                app:layout_constraintTop_toBottomOf="@id/iv_login_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_password"
                app:boxStrokeColor="@color/primary_color"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/primary_color"
                app:layout_constraintTop_toBottomOf="@id/til_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bt_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/bt_forget_password"
                app:layout_constraintEnd_toEndOf="@id/til_password"
                app:layout_constraintTop_toBottomOf="@id/til_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingStart="64dp"
                android:paddingTop="16dp"
                android:paddingEnd="64dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                android:backgroundTint="@color/primary_color"
                android:enabled="@{user.status != Status.LOADING}"
                android:text="@string/bt_login"
                app:layout_constraintEnd_toEndOf="@id/til_password"
                app:layout_constraintStart_toStartOf="@id/til_password"
                app:layout_constraintTop_toBottomOf="@id/bt_forget_password" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/bt_google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cd_google_login"
                android:enabled="@{user.status != Status.LOADING}"
                android:src="@drawable/ic_google"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/til_password"
                app:layout_constraintStart_toStartOf="@id/til_password"
                app:layout_constraintTop_toBottomOf="@id/bt_login"
                app:tint="@null" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/primary_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleOrGone="@{user.status == Status.LOADING}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>